--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <hr>
         <div class="contact-me">
-          <a class="btn" href="atulsah8873@gmail.com">CONTACT ME</a>
+          <a class="btn" href="mailto: atulsah8873@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
